# poetry-lambda

./: .gitignore  LICENSE  buildspec.yml  pyproject.toml  pytest.ini  samconfig.toml  template.yaml
s3_writer/src/: handler.py  s3_driver.py
s3_writer/tests/: hello_test.py
